# EHRSQL

./: .gitignore  LICENSE  README.md  evaluate.py  evaluation.py  generate.py  index.html  pyproject.toml  t5_threshold.ipynb  wget-log.1
T5/: abstain_with_entropy.py  config.py  generate.py  main.py  model.py  trainer_t5.py
T5/config/ehrsql/eval/: ehrsql_eicu_t5_base__eicu_valid.yaml  ehrsql_eicu_t5_base_schema__eicu_valid.yaml  ehrsql_mimic3_t5_base__mimic3_valid.yaml  ehrsql_mimic3_t5_base_schema__mimic3_valid.yaml  t5_ehrsql_eicu_natural_lr0.001_best__eicu_natural_valid.yaml  t5_ehrsql_eicu_natural_lr0.001_schema_best__eicu_natural_valid.yaml  t5_ehrsql_mimic3_natural_lr0.001_best__mimic3_natural_valid.yaml  t5_ehrsql_mimic3_natural_lr0.001_schema_best__mimic3_natural_valid.yaml
T5/config/ehrsql/training/: ehrsql_eicu_t5_base.yaml  ehrsql_eicu_t5_base_schema.yaml  (+6 more)
dataset/ehrsql/: CHANGELOG.md  tables.json
dataset/ehrsql/eicu/: allergy.csv  diagnosis.csv  eicu.sql  eicu.sqlite  medication.csv  microlab.csv  patient.csv  test.json  treatment.csv  valid.json
dataset/ehrsql/mimic_iii/: ADMISSIONS.csv  DIAGNOSES_ICD.csv  D_ICD_DIAGNOSES.csv  D_ICD_PROCEDURES.csv  D_ITEMS.csv  D_LABITEMS.csv  ICUSTAYS.csv  MICROBIOLOGYEVENTS.csv  PATIENTS.csv  PROCEDURES_ICD.csv  TRANSFERS.csv  mimic_iii.sql  mimic_iii.sqlite  test.json  valid.json
gpt/: OPENAI_API_KEY.json  codex.py
gpt/prompts/: codex_apidoc.txt  codex_create_select.txt  codex_create_select_sample.txt  codex_select.txt
outputs/eval_ehrsql_eicu_t5_base__eicu_valid/: prediction_raw.json
outputs/eval_ehrsql_mimic3_t5_base__mimic3_valid/: prediction.json
preprocess/: preprocess_db.py  preprocess_db_eicu.py  preprocess_db_mimic_iii.py  preprocess_utils.py
stylesheets/: layout.css
tests/: conftest.py  test_infrastructure_validation.py
utils/: dataset.py  logger.py  model_utils.py  optim.py  process.py
